Basic edit functionality completed.

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 			<hr/>
 			<form name="manifestForm" action="#" onsubmit="validateForm(); return false">
 				<div id="appDetails">
-					App Name: <br><input type="text" name="name"><br>
-					App Description: <br><textarea cols="27" rows="8" name="description"></textarea><br>
+					App Name: <br><input type="text" name="name" id="appname"><br>
+					App Description: <br><textarea cols="27" rows="8" name="description" id="appdesc"></textarea><br>
 				</div>
 				<div id="developerDetails">
-					Developer's Name: <br><input type="text" name="name"><br>
-					Developer's URL: <br><input type="text" name="url"><br>
+					Developer's Name: <br><input type="text" name="name" id="devname"><br>
+					Developer's URL: <br><input type="text" name="url" id="devurl"><br>
 				</div>
 				<hr/>
 				<div id="footer">
