Included 'Upload to Marketplace' Homescreen Button.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 		<div id="appTypeSelector" class="unhidden">
 			<div class="caption"><h1>Voila!</h1></div>
 			<hr/>
-			<br/>
 			<div id="selectorOptions">
-				<br/><br/>
+				<br/>
 				<div id="addApp">
 					<input class="submit" onclick="createNew()" type="submit" value="Create New Application">
 				</div>
@@ -29,12 +28,14 @@
 					<input class="submit" onclick="viewExisting()" type="submit" value="View Existing Applications">
 				</div>
 				<br/>
+				<div id="uploadApp">
+					<input class="submit" onclick="window.location.href='https://marketplace.firefox.com/developers/submit/'" type="submit" value="Upload Applications To Marketplace">
+				</div>
+				<br/>
 			</div>
-			<br/>
 			<hr/>
 			<div id="footer">
 			</div>
-			<br/>
 		</div>
 
 
